# e-resept-2.5

./: CMakeLists.txt
R0106-Hodemelding-v12/: MsgHead-v1_2.xsd-LES_MEG.txt
R0908-eResept-M1-M21-2013-10-08/: R0908-eResept-M1-M21-2013-10-08.doc
R1008-eResept-M2-M12-2015-12-02/: R1008-eResept-M2-M12-2015-12-02.doc
R1108-eResept-M3-M14-M15-2013-04-16/: ER-M15-2006-10-06.xsd  R1108-eResept-M3-M14-M15-2013-04-16.doc
R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/: ER-M241-2009-02-20.xsd  ER-M242-2008-10-03.xsd  R1208-eResept-M5-M7-M95-8-M41-5-2015-10-15.doc
R1308-eResept-M6-M8-M81-M10-M20-2015-09-22/: R1308-eResept-M6-M8-M81-M10-M20-2015-09-22.doc
R1408-eResept-M9.1-4-2014-04-07/: R1408-eResept-M9.1-4-2014-04-07.doc
R1508-eResept-M18-M22-M23-2013-04-16/: R1508-eResept-M18-M22-M23-2013-04-16.doc
R1608-eResept-M25-2015-09-22/: LES_MEG-KNOWN_BUG.txt  R1608-eResept-M25-mm-2015-09-22.doc
R1808-eResept-M30-2014-12-01/: Forskrivning-XXX.xsd-LES_MEG.txt  R1808-eResept-M30-2014-12-01.doc
R1908-eResept-M4-2013-04-16/: R1908-eResept-M4-2013-04-16.doc
eResept-MV-2013-08-16/: eResept-MV-2013-08-16.docx
felles/: NOTAT-kith-base64.doc
src/: ParseMessageXSDs.py
