cmake_minimum_required(VERSION 3.6)
project(Meldingsdefinisjoner)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    eResept-MV-2013-08-16/ER-MV-2013-08-16.xsd
    eResept-MV-2013-08-16/eResept-MV-2013-08-16.docx
    eResept-MV-2013-08-16/RekvirentWebService.wsdl
    felles/felleskomponent1.xsd
    felles/Forskrivning-2013-10-08-loose.xsd
    felles/Forskrivning-2013-10-08.xsd
    felles/Forskrivning-2014-12-01-loose.xsd
    felles/Forskrivning-2014-12-01.xsd
    felles/kith-base64.xsd
    felles/kith.xsd
    felles/MsgHead-v1_2.xsd
    felles/NOTAT-kith-base64.doc
    felles/NOTAT-kith-base64.pdf
    felles/NOTAT-RESH-ID_i_eResept-2010-09-24.pdf
    felles/R17-01Datatyper-v1_1.pdf
    felles/Signerende_HelsepersonellSykmelding-eResept-notat.pdf
    felles/xml.xsd
    felles/xmldsig-core-schema.xsd
    felles/XMLSchema.xsd
    HIS_80415_2004_AppRec-v1/AppRec-v1-2004-11-21.xsd
    "HIS_80415_2004_AppRec-v1/HIS_80415_2004-AppRec-v1 rev2-2013-03-26.pdf"
    R0106-Hodemelding-v12/MsgHead-v1_2.xsd-LES_MEG.txt
    R0106-Hodemelding-v12/R01-06-Hodemelding-v12.pdf
    R0908-eResept-M1-M21-2013-10-08/ER-M1-2013-10-08.xsd
    R0908-eResept-M1-M21-2013-10-08/ER-M21-2013-10-08-eksempel1-msghead.xml
    R0908-eResept-M1-M21-2013-10-08/ER-M21-2013-10-08.xsd
    R0908-eResept-M1-M21-2013-10-08/R0908-eResept-M1-M21-2013-10-08.doc
    R0908-eResept-M1-M21-2013-10-08/R0908-eResept-M1-M21-2013-10-08.pdf
    R1008-eResept-M2-M12-2015-12-02/ER-M12-2014-12-01.xsd
    R1008-eResept-M2-M12-2015-12-02/ER-M2-2014-12-01.xsd
    R1008-eResept-M2-M12-2015-12-02/R1008-eResept-M2-M12-2015-12-02.doc
    R1008-eResept-M2-M12-2015-12-02/R1008-eResept-M2-M12-2015-12-02.pdf
    R1108-eResept-M3-M14-M15-2013-04-16/ER-M14-2008-12-12-eksempel1-msghead.xml
    R1108-eResept-M3-M14-M15-2013-04-16/ER-M14-2008-12-12-eksempel1.xml
    R1108-eResept-M3-M14-M15-2013-04-16/ER-M14-2008-12-12.xsd
    R1108-eResept-M3-M14-M15-2013-04-16/ER-M15-2006-10-06-eksempel1-msghead.xml
    R1108-eResept-M3-M14-M15-2013-04-16/ER-M15-2006-10-06.xsd
    R1108-eResept-M3-M14-M15-2013-04-16/ER-M3-2010-05-01-eksempel1.xml
    R1108-eResept-M3-M14-M15-2013-04-16/ER-M3-2010-05-01.xsd
    R1108-eResept-M3-M14-M15-2013-04-16/ER-M3-2010-05-011-eksempel1-msghead.xml
    R1108-eResept-M3-M14-M15-2013-04-16/R1108-eResept-M3-M14-M15-2013-04-16.doc
    R1108-eResept-M3-M14-M15-2013-04-16/R1108-eResept-M3-M14-M15-2013-04-16.pdf
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M241-2009-02-20-eksempel1.xml
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M241-2009-02-20.xsd
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M242-2008-10-03-eksempel1.xml
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M242-2008-10-03.xsd
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M243-2013-10-15.xsd
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M244-2013-10-15.xsd
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M245-2013-10-15.xsd
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M5-2013-04-16-eksempel1.xml
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M5-2013-04-16.xsd
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M52-2013-12-01.xsd
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M7-2008-05-01-eksempel1.xml
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M7-2008-05-01.xsd
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M95-2015-05-01.xsd
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M96-2015-05-01.xsd
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M97-2015-05-01.xsd
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/ER-M98-2015-10-15.xsd
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/M96-b64.xml
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/R1208-eResept-M5-M7-M95-8-M41-5-2015-10-15.doc
    R1208-eResept-M5-M7-M95-8-M241-5-2015-10-15/R1208-eResept-M5-M7-M95-8-M41-5-2015-10-15.pdf
    R1308-eResept-M6-M8-M81-M10-M20-2015-09-22/ER-M10-2013-10-08.xsd
    R1308-eResept-M6-M8-M81-M10-M20-2015-09-22/ER-M20-2013-10-08.xsd
    R1308-eResept-M6-M8-M81-M10-M20-2015-09-22/ER-M6-2013-10-08.xsd
    R1308-eResept-M6-M8-M81-M10-M20-2015-09-22/ER-M8-2013-10-08.xsd
    R1308-eResept-M6-M8-M81-M10-M20-2015-09-22/ER-M81-2013-10-08.xsd
    R1308-eResept-M6-M8-M81-M10-M20-2015-09-22/ER-Utlevering-2013-10-08.xsd
    R1308-eResept-M6-M8-M81-M10-M20-2015-09-22/R1308-eResept-M6-M8-M81-M10-M20-2015-09-22.doc
    R1308-eResept-M6-M8-M81-M10-M20-2015-09-22/R1308-eResept-M6-M8-M81-M10-M20-2015-09-22.pdf
    R1408-eResept-M9.1-4-2014-04-07/ER-M91-2013-10-08-eksempel1.xml
    R1408-eResept-M9.1-4-2014-04-07/ER-M91-2013-10-08-eksempel2.xml
    R1408-eResept-M9.1-4-2014-04-07/ER-M91-2013-10-08.xsd
    R1408-eResept-M9.1-4-2014-04-07/ER-M92-2013-10-08-eksempel1.xml
    R1408-eResept-M9.1-4-2014-04-07/ER-M92-2013-10-08.xsd
    R1408-eResept-M9.1-4-2014-04-07/ER-M93-2008-04-29-eksempel1.xml
    R1408-eResept-M9.1-4-2014-04-07/ER-M93-2010-06-04.xsd
    R1408-eResept-M9.1-4-2014-04-07/ER-M94-2010-07-01-eksempel1.xml
    R1408-eResept-M9.1-4-2014-04-07/ER-M94-2010-07-01.xsd
    R1408-eResept-M9.1-4-2014-04-07/R1408-eResept-M9.1-4-2014-04-07.doc
    R1408-eResept-M9.1-4-2014-04-07/R1408-eResept-M9.1-4-2014-04-07.pdf
    R1508-eResept-M18-M22-M23-2013-04-16/ER-M18-2013-04-16.xsd
    R1508-eResept-M18-M22-M23-2013-04-16/ER-M22-2006-10-06.xsd
    R1508-eResept-M18-M22-M23-2013-04-16/ER-M23-2006-10-06.xsd
    R1508-eResept-M18-M22-M23-2013-04-16/R1508-eResept-M18-M22-M23-2013-04-16.doc
    R1508-eResept-M18-M22-M23-2013-04-16/R1508-eResept-M18-M22-M23-2013-04-16.pdf
    R1608-eResept-M25-2015-09-22/ER-KritiskInformasjon-2013-04-25.xsd
    R1608-eResept-M25-2015-09-22/ER-M25-2013-10-08.xsd
    R1608-eResept-M25-2015-09-22/ER-M251-2013-10-08.xsd
    R1608-eResept-M25-2015-09-22/ER-M252-2013-10-08.xsd
    R1608-eResept-M25-2015-09-22/ER-M253-2013-10-08.xsd
    R1608-eResept-M25-2015-09-22/ER-M254-2013-10-08.xsd
    R1608-eResept-M25-2015-09-22/ER-M271-2013-04-16.xsd
    R1608-eResept-M25-2015-09-22/ER-M272-2013-04-16.xsd
    R1608-eResept-M25-2015-09-22/ER-M273-2012-06-11.xsd
    R1608-eResept-M25-2015-09-22/ER-M274-2012-06-11.xsd
    R1608-eResept-M25-2015-09-22/ER-M28-2012-06-11.xsd
    R1608-eResept-M25-2015-09-22/ER-M911-2014-01-21.xsd
    R1608-eResept-M25-2015-09-22/ER-M912-2014-01-21.xsd
    R1608-eResept-M25-2015-09-22/ER-M921-2013-10-15.xsd
    R1608-eResept-M25-2015-09-22/ER-M922-2013-10-15.xsd
    R1608-eResept-M25-2015-09-22/LES_MEG-KNOWN_BUG.txt
    R1608-eResept-M25-2015-09-22/R1608-eResept-M25-mm-2015-09-22.doc
    R1608-eResept-M25-2015-09-22/R1608-eResept-M25-mm-2015-09-22.pdf
    R1808-eResept-M30-2014-12-01/ER-M30-2014-12-01-loose.xsd
    R1808-eResept-M30-2014-12-01/ER-M30-2014-12-01.xsd
    R1808-eResept-M30-2014-12-01/Forskrivning-XXX.xsd-LES_MEG.txt
    R1808-eResept-M30-2014-12-01/R1808-eResept-M30-2014-12-01.doc
    R1808-eResept-M30-2014-12-01/R1808-eResept-M30-2014-12-01.pdf
    R1908-eResept-M4-2013-04-16/ER-M41-2006-10-06-example-msghead.xml
    R1908-eResept-M4-2013-04-16/ER-M41-2006-10-06-example.xml
    R1908-eResept-M4-2013-04-16/ER-M41-2006-10-06.xsd
    R1908-eResept-M4-2013-04-16/ER-M42-2006-10-06-example-msghead.xml
    R1908-eResept-M4-2013-04-16/ER-M42-2006-10-06-example.xml
    R1908-eResept-M4-2013-04-16/ER-M42-2006-10-06.xsd
    R1908-eResept-M4-2013-04-16/R1908-eResept-M4-2013-04-16.doc
    R1908-eResept-M4-2013-04-16/R1908-eResept-M4-2013-04-16.pdf)

add_executable(Meldingsdefinisjoner ${SOURCE_FILES})